src/test/ui/did_you_mean/issue-34337.stderr
error[E0596]: cannot borrow immutable local variable `key` as mutable
  --> $DIR/issue-34337.rs:16:14
   |
16 |     get(&mut key); //~ ERROR cannot borrow
   |              ^^^
   |              |
   |              cannot reborrow mutably
   |              try removing `&mut` here

error: aborting due to previous error

